--- a/index.html
+++ b/index.html
@@ -3,103 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AllUnite Clone</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Chart.js library -->
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#pricing">Pricing</a></li>
-            <li><a href="#testimonials">Testimonials</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+    <div class="dashboard">
+        <!-- Sidebar -->
+        <aside class="sidebar">
+            <h2>Dashboard</h2>
+            <ul>
+                <li><a href="#overview">Overview</a></li>
+                <li><a href="#performance">Performance</a></li>
+                <li><a href="#charts">Charts</a></li>
+                <li><a href="#settings">Settings</a></li>
+            </ul>
+        </aside>
 
-    <!-- Hero Section -->
-    <section id="home" class="hero">
-        <div class="hero-content">
-            <h1>Welcome to AllUnite</h1>
-            <p>Connecting businesses and people in a seamless way.</p>
-            <a href="#services" class="cta-btn">Explore Our Services</a>
-        </div>
-    </section>
+        <!-- Main Content -->
+        <div class="main-content">
+            <!-- Header -->
+            <header>
+                <h1>Performance Dashboard</h1>
+            </header>
 
-    <!-- About Us Section -->
-    <section id="about" class="section about">
-        <div class="content">
-            <h2>About Us</h2>
-            <p>We aim to bring businesses and individuals together, creating a community of collaboration.</p>
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section id="services" class="section services">
-        <div class="content">
-            <h2>Our Services</h2>
-            <div class="service-card">
-                <h3>Business Solutions</h3>
-                <p>Providing businesses with the tools they need to succeed.</p>
-            </div>
-            <div class="service-card">
-                <h3>Consulting</h3>
-                <p>Expert advice and strategic insights for growth.</p>
-            </div>
-            <div class="service-card">
-                <h3>Collaboration Tools</h3>
-                <p>Building platforms that help teams collaborate effectively.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Pricing Section -->
-    <section id="pricing" class="section pricing">
-        <div class="content">
-            <h2>Our Pricing</h2>
-            <div class="pricing-table">
-                <div class="pricing-item">
-                    <h3>Basic</h3>
-                    <p>$29/month</p>
-                    <p>Access to essential features for individuals</p>
+            <!-- Performance Score -->
+            <section id="performance" class="performance-section">
+                <h2>Performance Score</h2>
+                <div class="performance-score">
+                    <span id="score">0</span>
+                    <p>Performance out of 100</p>
                 </div>
-                <div class="pricing-item">
-                    <h3>Standard</h3>
-                    <p>$49/month</p>
-                    <p>Most popular plan for businesses</p>
-                </div>
-                <div class="pricing-item">
-                    <h3>Premium</h3>
-                    <p>$99/month</p>
-                    <p>All-inclusive plan for large enterprises</p>
-                </div>
-            </div>
-        </div>
-    </section>
+            </section>
 
-    <!-- Testimonials Section -->
-    <section id="testimonials" class="section testimonials">
-        <div class="content">
-            <h2>What Our Clients Say</h2>
-            <p>"AllUnite has revolutionized the way our business operates!"</p>
-            <p>"Amazing experience. Would recommend to everyone."</p>
+            <!-- Charts Section -->
+            <section id="charts" class="charts-section">
+                <h2>Analytics</h2>
+                <div class="chart-container">
+                    <canvas id="chart1"></canvas>
+                    <canvas id="chart2"></canvas>
+                    <canvas id="chart3"></canvas>
+                    <canvas id="chart4"></canvas>
+                    <canvas id="chart5"></canvas>
+                    <canvas id="chart6"></canvas>
+                </div>
+            </section>
         </div>
-    </section>
-
-    <!-- Contact Us Section -->
-    <section id="contact" class="section contact">
-        <div class="content">
-            <h2>Contact Us</h2>
-            <form action="#" method="POST">
-                <input type="text" placeholder="Your Name" required>
-                <input type="email" placeholder="Your Email" required>
-                <textarea placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-        </div>
-    </section>
+    </div>
 
     <script src="js/scripts.js"></script>
 </body>
