--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 <body>
     <!-- Sidebar -->
     <aside class="sidebar">
-        <div class="logo">Vizora</div>
-        <nav class="nav">
-            <ul>
-                <li><a href="#">Analytics</a></li>
-                <li><a href="#">Traffic</a></li>
-                <li><a href="#">Demographics</a></li>
-                <li><a href="#">Settings</a></li>
-            </ul>
-        </nav>
-    </aside>
+    <div class="logo">
+        <h1>Vizora</h1>
+    </div>
+    <nav class="nav">
+        <ul>
+            <li><a href="#" class="active"><i class="fas fa-chart-line"></i> Analytics</a></li>
+            <li><a href="#"><i class="fas fa-car"></i> Traffic</a></li>
+            <li><a href="#"><i class="fas fa-users"></i> Demographics</a></li>
+            <li><a href="#"><i class="fas fa-cogs"></i> Settings</a></li>
+        </ul>
+    </nav>
+</aside>
 
     <!-- Main Content -->
     <main class="content">
