--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Vizora Analytics</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- For Charts -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <!-- Sidebar -->
