--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
         
             <!-- Charts Section -->
             <section class="charts-grid">
-                <div class="chart" id="chart1"><canvas></canvas></div>
-                <div class="chart" id="chart2"><canvas></canvas></div>
-                <div class="chart" id="chart3"><canvas></canvas></div>
-                <div class="chart" id="chart4"><canvas></canvas></div>
-                <div class="chart" id="chart5"><canvas></canvas></div>
-                <div class="chart" id="chart6"><canvas></canvas></div>
+                <div class="chart" ><canvas id="chart1"></canvas></div>
+                <div class="chart" ><canvas id="chart2"></canvas></div>
+                <div class="chart" ><canvas id="chart3"></canvas></div>
+                <div class="chart" ><canvas id="chart4"></canvas></div>
+                <div class="chart" ><canvas id="chart5"></canvas></div>
+                <div class="chart" ><canvas id="chart6"></canvas></div>
             </section>
         
             <!-- Footer -->
