added traffic details cards

--- a/index.html
+++ b/index.html
@@ -51,11 +51,29 @@
             </header>
 
             <div class="billboard-card">
-                <div class="billboard-details">
-                    <h3 id="billboard-title">Billboard 1 </h3>
-                    <p id="billboard-location"><strong>Location:</strong> Times Square, New York</p>
-                    <p id="billboard-type"><strong>Type:</strong> Digital</p>
-                    <p id="billboard-period"><strong>Active Period:</strong> Jan 2024 - Present</p>
+                <p class="billboard-info">
+                    <span><strong>Location:</strong> Times Square, New York</span> | 
+                    <span><strong>Type:</strong> Digital</span> | 
+                    <span><strong>Active:</strong> Jan 2024 - Present</span>
+                </p>
+            </div>
+
+
+            <div class="traffic-stats">
+                <div class="traffic-card">
+                    <h3 class="traffic-title">Vehicle Count</h3>
+                    <p class="traffic-data">12,340</p>
+                    <p class="traffic-change positive">+5.4% from previous</p>
+                </div>
+                <div class="traffic-card">
+                    <h3 class="traffic-title">Traffic Density</h3>
+                    <p class="traffic-data">High</p>
+                    <p class="traffic-change negative">-2.1% from previous</p>
+                </div>
+                <div class="traffic-card">
+                    <h3 class="traffic-title">Traffic Movement Pace</h3>
+                    <p class="traffic-data">42 km/h</p>
+                    <p class="traffic-change positive">+3.2% from previous</p>
                 </div>
             </div>
 
