--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="traffic-card">
                     <h3 class="traffic-title">Traffic Density</h3>
-                    <p class="traffic-data">High</p>
+                    <p class="traffic-data">35</p>
                     <p class="traffic-change negative">-2.1% from previous</p>
                 </div>
                 <div class="traffic-card">
