--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </div>
             <nav class="nav">
                 <ul>
-                    <li><a href="#" class="active"><i class="fas fa-chart-line"></i> Analytics</a></li>
-                    <li><a href="#"><i class="fas fa-car"></i> Traffic</a></li>
+                    <li><a href="index.html" class="active"><i class="fas fa-chart-line"></i> Analytics</a></li>
+                    <li><a href="traffic.html"><i class="fas fa-car"></i> Traffic</a></li>
                     <li><a href="#"><i class="fas fa-users"></i> Demographics</a></li>
                     <li><a href="#"><i class="fas fa-cogs"></i> Settings</a></li>
                 </ul>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="traffic-card">
                     <h3 class="traffic-title">Traffic Density</h3>
-                    <p class="traffic-data">35</p>
+                    <p class="traffic-data">35.6</p>
                     <p class="traffic-change negative">-2.1% from previous</p>
                 </div>
                 <div class="traffic-card">
