--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <ul>
                     <li><a href="index.html" class="active"><i class="fas fa-chart-line"></i> Analytics</a></li>
                     <li><a href="traffic.html"><i class="fas fa-car"></i> Traffic</a></li>
-                    <li><a href="#"><i class="fas fa-users"></i> Demographics</a></li>
-                    <li><a href="#"><i class="fas fa-cogs"></i> Settings</a></li>
+                    <li><a href="demographics.html"><i class="fas fa-users"></i> Demographics</a></li>
+                    <li><a href="settings.html"><i class="fas fa-cogs"></i> Settings</a></li>
                 </ul>
             </nav>
         </aside>
