--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="dashboard">
         <aside class="sidebar">
             <div class="logo">
-                <h1>vizora</h1>
+                <h1>vagon</h1>
             </div>
             <nav class="nav">
                 <ul>
